This this the changelog file for the Pothos Comms toolkit.

Release 0.1.0 (pending)
==========================

- Created templated Fast Fourier Transform block
- Expanded header in frame sync including error correction
- Added verbose option to the frame sync to aid in debugging
- Added DC removal block with moving average implementation
- Moved windowing functions from the util toolkit to filter/
- Created mac directory for packet-based MAC layers blocks
- Moved communications blocks from pothos-blocks toolkit