@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Comms toolkit.
 Release 0.1.0 (pending)
 ==========================
 
+- Created templated frequency demodulator block
 - Created templated Fast Fourier Transform block
 - Expanded header in frame sync including error correction
 - Added verbose option to the frame sync to aid in debugging
